# GutWise

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.claude/skills/: generate-dataset.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
app/: cached_examples.json  main.py
competitions/gemma-4-good-hackathon/: KAGGLE_NOTEBOOK.md  PROJECT_DESCRIPTION.md  QUICK_DEMO_GUIDE.md  SPACE_README.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md  VIDEO_SCRIPT_MINIMAL.md  WRITEUP.md
datasets/chunks/: diagnosis.jsonl  diet.jsonl  epidemiology.jsonl  general.jsonl  lifestyle.jsonl  pathophysiology.jsonl  patient_education.jsonl  pharmacology.jsonl  psychological.jsonl
datasets/eval/: heldout_questions.jsonl
datasets/sources/: medlineplus_ibs.txt  nhs_ibs_diet_lifestyle_medicines.txt  nhs_ibs_overview.txt  nhs_ibs_symptoms.txt  statpearls_ibs.txt
datasets/sources/pubmed/: pmid_12095474_Irritable_Bowel_Syndrome.txt  pmid_15767561_Irritable_bowel_syndrome.txt  pmid_15861740_Irritable_bowel_syndrome.txt  pmid_17177577_Irritable_bowel_syndrome.txt  pmid_19638214_Mindfulness_for_irritable_bowel_syndrome_protocol_developmen.txt  pmid_21718578_Irritable_bowel_syndrome.txt  pmid_21872090_Irritable_bowel_syndrome.txt  pmid_22426087_Global_prevalence_of_and_risk_factors_for_irritable_bowel_sy.txt  pmid_27144627_Bowel_Disorders.txt  (+61 more)
datasets/validated/: dedup_report.json  train_deduped.jsonl  train_v2.jsonl
docs/: hackathon.md  pipeline.md
notebooks/eval/: baseline_e4b_eval.ipynb  gutwise_v2_eval.ipynb
notebooks/training/: gutwise_finetune.ipynb
reference/: hallucination_blocklist.md  ibs_reference.md  medication_whitelist.md
scripts/chunk/: chunk_sources.py
scripts/collect/: fetch_sources.py  filter_hf_datasets.py
scripts/evaluate/: eval_judge.py  medical_judge.py  quality_filter.py
scripts/generate/: generate_batch.py  generate_gw_training_data.py  prompts.py
scripts/publish/: DATASET_CARD.md  MODEL_CARD.md  push_model.py
tests/: test_smoke.py
(+5 files in other folders)
