[project]
name = "gutwise"
version = "0.1.0"
description = "Offline-first IBS health education assistant powered by fine-tuned Gemma 4"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["ibs", "health", "llm", "fine-tuning", "gemma", "medical", "gastroenterology"]
authors = [{ name = "y0sif" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.94.0",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
collect = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]
generate = [
    "anthropic>=0.40",
    "tiktoken>=0.8",
]
train = [
    "unsloth>=2025.3",
    "transformers>=4.48",
    "peft>=0.14",
    "trl>=0.14",
    "bitsandbytes>=0.45",
    "accelerate>=1.2",
    "torch>=2.5",
    "wandb>=0.19",
]
evaluate = [
    "openai>=2.30.0",
]
app = [
    "gradio>=5.0",
    "transformers>=4.48",
    "torch>=2.5",
]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "ipykernel>=6.29",
]

[project.urls]
Repository = "https://github.com/y0sif/GutWise"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
exclude = ["notebooks/**"]

# Pipeline generation/eval scripts contain long literal prompt templates;
# wrapping them hurts readability. Allow the long lines there only.
[tool.ruff.lint.per-file-ignores]
"scripts/generate/generate_gw_training_data.py" = ["E501", "F841"]
"scripts/evaluate/eval_judge.py" = ["E501", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "app"]
